# chessai

./: .gitignore  README.md  chessai.cabal
app/: Main.hs
src/Chess/: Actions.hs  Base.hs  Query.hs
test/: Spec.hs
test/Chess/: ActionsSpec.hs  QuerySpec.hs
