name:                chessai
version:             0.1.0.0
synopsis:            Chess AI built in Haskell. Given a board, find the best move given the current state of the board.
description:         Please see README.md
homepage:            https://github.com/kevinrtai/chessai#readme
license:             BSD3
license-file:        LICENSE
author:              Kevin Tai
maintainer:          kevin.r.tai@gmail.com
copyright:           2016 Kevin Tai
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chess.Base,
                       Chess.Query,
                       Chess.Actions
  build-depends:       base >= 4.7 && < 5,
                       containers
  default-language:    Haskell2010

executable chessai-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, 
                       chessai
  default-language:    Haskell2010

test-suite chessai-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       chessai,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       hspec,
                       containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kevinrtai/chessai
